# kirakira

./: .gitignore  README.md  cookies.txt  docker-compose.yml
backend/: .dockerignore  Dockerfile  migrate.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: auth.py  characters.py  chat.py  conversations.py  credits.py  upload.py  usage.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: character.py  chat.py  credit.py  usage.py  user.py
backend/app/schemas/: character.py  chat.py  custom.py  user.py
backend/app/services/: credit_system.py  gemini.py  huggingface.py
backend/app/utils/: date.py
database/: init.sql
database/migrations/: 001_add_credit_system.sql
frontend/: .dockerignore  Dockerfile  nginx.conf  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatSidebar.tsx  ConfirmModal.tsx  CreditDisplay.module.css  CreditDisplay.tsx  ImageCropper.tsx  Layout.tsx
frontend/src/pages/: CharacterDetail.tsx  Characters.tsx  Chat.tsx  Create.tsx  MyPage.tsx  RechargePage.tsx  Register.tsx
k8s/: README.md  kirakira.yaml  minikube.yaml
